--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 body{
@@ -187,22 +188,37 @@ iframe{
     margin-top: 5vh;
 }
 .suggestions{
-    padding: 15px;    
+    padding: 9px 16px; 
+    border-bottom: 1px solid rgb(236, 231, 231); 
+    line-height: l.3;
+    font-size: 18px;  
+    cursor: pointer; 
+}
+.result-page .similar-results .suggestions:last-child{
+    border: none;
 }
 .carret{
-    width: 2vw;
-    margin-left: 34vw;
+    width: 20px;
+    
 }
 
 footer{
     background-color: rgb(247, 246, 246);
     clear: both;
     margin-top: 420vh;
-    padding: 3vh 0px 0vh 15vw;
+    
    
 }
 span{
     color: #000;
+}
+
+.footer{
+    padding: 20px;
+    line-height: 1;
+    font-size: 17px;
+    color: grey;
+    padding-left: 150px;
 }
 
 
